part_3/src/test_files/test_nested_decl.pas
program Hello;

begin;
    procedure g(); begin end; // ok
    begin 
        g(); // ok
    end;
    g(); // error
end.